[package]
name = "prefix-server"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin = "*"
bitcoin-zmq = "*"
bitcoin_hashes = "*"
bytes = "*"
clap = { version = "*", features = ["yaml"] }
config = "*"
dirs = "*"
env_logger = "*"
hex = "*"
lazy_static = "*"
log = "*"
futures = "*"
prost = "*"
reqwest = "*"
rocksdb = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc.git", features = ["tower-hyper"] }
tokio = "*"
tower-hyper = "*"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc.git", features = ["tower-hyper"]  }
