[package]
name = "prefix-server"
version = "0.1.0"
authors = ["Harry L. Barber <hlbarber93@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin = "0.21.0"
bitcoin-zmq = "0.1.3"
bitcoin_hashes = "0.7.1"
bytes = "^0.4"
clap = { version = "2.33.0", features = ["yaml"] }
config = "0.9.3"
dirs = "2.0.2"
env_logger = "0.7.1"
hex = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
futures = "^0.1"
prost = "0.5.0"
reqwest = "0.9.22"
rocksdb = "0.13.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc.git", features = ["tower-hyper"] }
tokio = "^0.1"
tower-hyper = "0.1.1"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc.git", features = ["tower-hyper"]  }
